www/style.css
/* style elements */
html {
  width: 100%;
  font-size: 16px;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  font-family: 'Roboto', sans-serif;
  font-size: 100%;
  line-height: 1.625;
  max-width: 100%;
  background-color: #01579b;
  color: rgba(0,0,0,0.87);
  padding-bottom: 0.25em;
  padding-left: 0.22em;
  padding-right: 0.23em;
}

.black { color: rgba(0,0,0,0.87); }
.white { color: white; }
.bg-color-grey-50 { background-color: #FAFAFA; }
.bg-color-grey-100 { background-color: #F5F5F5; }
.bg-color-grey-300 { background-color: #E0E0E0; }
.color-primary { color: #01579b; }
.bg-color-primary { background-color: #01579b; }
.color-light { color: #4f83cc; }
.bg-color-light { background-color: #4f83cc; }
.color-dark { color: #002f6c; }
.bg-color-dark { background-color: #002f6c; }
.color-secondary { color: #00e676; }
.bg-color-secondary { background-color: #00e676; }
.color-secondary-light { color: #66ffa6; }
.bg-color-secondary-light { background-color: #66ffa6; }
.color-secondary-dark { color: #00b248; }
.bg-color-secondary-dark { background-color: #00b248; }

.warning { background-color: #FDD835 !important; }
.error { background-color: #FF1744 !important; }

.color-yellow-600 { color: #FDD835;}
.color-red-600 { color: #E53935; }
.color-blue-600 { color: #1E88E5; }
.color-green-a400 { color: #00E676; }

h2 { margin-top: 1em; }

canvas { background-color: black; }

hr {
  color: rgba(0,0,0,0.13);
  background-color: rgba(0,0,0,0.13);
  border: none;
  height: 1px;
  margin-bottom: 1.25em;
  margin-top: 1.25em;
}

a {
  text-decoration: none;
  padding-bottom: 0.05em;
  padding-left: 0.1em;
  padding-right: 0.1em;
  color: #1967D2;
}

a:hover {
  border-bottom: .055555em solid #1967D2;
}

.card a:visited,
.tile a:visited {
  color: #609;
}
.card a:visited:hover,
.tile a:visited:hover {
  border-bottom: .055555em solid #609;
}

a.button:hover {
  border-bottom: none;
}

a.white:hover,
.white a:hover {
  border-bottom: .055555em solid white;
}


/* content layout and style */
.header {
  line-height: normal;
  margin: 0;
  text-align: center;
  font-size: 1.333em;
  font-weight: normal;
  letter-spacing: .02em;
  color: #f5f5f5;
  min-width: 100%;
  top: 0;
  right: 0;
  z-index : 1;
  min-height: 2.4em;
  line-height: normal;
  padding: 0;
}

.header-content {
  color: white;
  background-color: #01579B;
  display: block;
  min-height: 2.2em;
  max-width: 45em;
  margin: 0 auto;
  padding: .05em;
  padding-bottom: 0.01em;
  padding-top: 0.1em;
  text-align: center;
}

.header-content .brand {
  display: block;
  margin: 0 auto;
  margin-top: .2em;
  margin-bottom: 0.3em;
  font-size: 2em;
}

.header-content .nav {
  color: white;
  font-size: 1em;
  max-width: 100%;
  margin: 0 auto;
  padding: 0;
  display: flex;
  justify-content: space-between;
}

.header-content a {
  font-style: inherit;
  color: inherit;
  background-color: transparent;
  font-size: inherit;
  text-decoration: none;
  font-variant: inherit;
  font-weight: inherit;
  line-height: inherit;
  font-family: inherit;
  padding: 0 .5em;
  border-bottom: 2px solid #01579B;
}

.header-content a:hover {
  border-bottom: 2px solid white;
}

.header-content a.current {
  border-bottom: 2px solid #00E676;
}

.header-content .nav span {
  flex: 0;
  flex-basis: 33%;
  font-size: 0.8888888em;
  margin-bottom: 0;
}

.header-content .nav span a {
  padding-bottom: 0.14em;
  display: inline-block;
  letter-spacing: 0.05em;
}

.header-content .brand a {
  padding-bottom: 0.01em;
}

.tile, 
.card {
  font-size: 1em;
  padding: 1.25em;
  background-color: #fdfdfd;
  max-width: 60em;
  margin: 0 auto;
  margin-top: 1em;
  margin-bottom: 1em;
  -webkit-transition: box-shadow .3s ease-in-out;
  transition: box-shadow .3s ease-in-out;
  /* 2dp shadow */
  -webkit-box-shadow: 0 0 4px 0 rgba(0,0,0,0.14),
  0 3px 4px 0 rgba(0,0,0,0.12),
  0 1px 5px 0 rgba(0,0,0,0.20);
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.14),
  0 3px 4px 0 rgba(0,0,0,0.12),
  0 1px 5px 0 rgba(0,0,0,0.20);
}

::selection,
::selection {
  background: #00e676;
  color: rgba(0,0,0,0.87);
}
::-moz-selection,
::-moz-selection {
  background: #00e676;
  color: rgba(0,0,0,0.87);
}

.tile>.full-bleed,
.card>.full-bleed {
  margin-left: -1.14em !important;
  margin-right: -1.14em !important;
}
.tile>div.full-bleed,
.card>div.full-bleed {
  padding: .25em 1em;
  border-top: 1px solid rgba(0,0,0,0.13);
  border-bottom: 1px solid rgba(0,0,0,0.13);
  margin-top: 1em;
  margin-bottom: 1em;
}
.tile>div.full-bleed.list-item,
.card>div.full-bleed.list-item {
  margin-top: 0px;
  margin-bottom: 0;
  border-top: none;
  /*background-color: rgba(0,0,0,0.001);*/
}
.tile>div.full-bleed.list-item.first,
.card>div.full-bleed.list-item.first {
  margin-top: 1em;
  border-top: 1px solid rgba(0,0,0,0.13);
}
.tile>.full-bleed.list-item:last-child,
.card>.full-bleed.list-item:last-child {
  margin-bottom: -0.55em;
  border-bottom: none;
}

/* card vs tile */
.card {
  border-radius: 2px;
}

.tile:hover,
.card:hover {
  /* 8dp shadow */
  -webkit-box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14),
  0 3px 14px 3px rgba(0,0,0,0.12),
  0 4px 15px 0 rgba(0,0,0,0.20);
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.14),
  0 3px 14px 3px rgba(0,0,0,0.12),
  0 4px 15px 0 rgba(0,0,0,0.20);
}

.tile img,
.card img {
  max-width: 100%;
  height: auto;
  margin: 0.25em auto;
  padding: 0;
}

.tile .last,
.card .last {
  clear: both;
}

.tile .title, 
.card .title {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 140%;
  /*margin-top: 0;*/
  margin-bottom: 0;
  padding: 0;
}

.tile .title:first-of-type, 
.card .title:first-of-type {
  margin-top: 0;
}

.tile .sub-title, 
.card .sub-title {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 120%;
  margin-top: 0;
  color: rgba(0, 0, 0, 0.54);
}
/* ... */

